# Spectrometer-Experiment

./: CMakeLists.txt  calculate_mean_of_angle.c  calculate_mean_of_angle.h  diffraction_grating.c  diffraction_grating.h  main.c  minimum-deflection-angle.c  minimum-deflection-angle.csv  minimum-deflection-angle.h  read_angular_data.c  read_angular_data.h  read_data.c  read_data.h  read_wavelength_data.c  read_wavelength_data.h  readcsv.c  readcsv.h  reflection_vertex.c  reflection_vertex.h  self_alignment_vertex.c  self_alignment_vertex.h  template.tex
data/: diffraction_grating.csv  minimum-deflection-angle.csv  vertex-angle-triangular-prism-reflection.csv  vertex-angle-triangular-prism-self-alignment.csv  分光计.xlsx  分光计zc.xlsx
